[gd_scene load_steps=6 format=3 uid="uid://b3qugj0ye4mus"]

[ext_resource type="Texture2D" uid="uid://cfgv72pg2yyad" path="res://sprites/hexagonTerrain_sheet.png" id="1_nky8v"]
[ext_resource type="Script" path="res://scripts/Editor.gd" id="1_ubug1"]
[ext_resource type="Theme" uid="uid://co811ue55i33m" path="res://resources/base_theme.tres" id="2_y8a26"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_a7s8r"]
texture = ExtResource("1_nky8v")
separation = Vector2i(2, 2)
texture_region_size = Vector2i(120, 140)
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
0:7/0 = 0
1:7/0 = 0
2:7/0 = 0
3:7/0 = 0
4:7/0 = 0
5:7/0 = 0
6:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
6:8/0 = 0
0:9/0 = 0
1:9/0 = 0
2:9/0 = 0
3:9/0 = 0
4:9/0 = 0
5:9/0 = 0
6:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
6:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
6:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
6:12/0 = 0
0:13/0 = 0
1:13/0 = 0
2:13/0 = 0
3:13/0 = 0
4:13/0 = 0
5:13/0 = 0
6:13/0 = 0

[sub_resource type="TileSet" id="TileSet_25pv1"]
tile_shape = 3
tile_size = Vector2i(120, 140)
sources/2 = SubResource("TileSetAtlasSource_a7s8r")

[node name="Editor" type="Node2D"]
script = ExtResource("1_ubug1")

[node name="TileMap" type="TileMap" parent="."]
unique_name_in_owner = true
z_index = -1
tile_set = SubResource("TileSet_25pv1")
format = 2
layer_0/tile_data = PackedInt32Array(0, 327682, 1, 65535, 327682, 1, -1, 327682, 1, -65536, 327682, 1, 1, 327682, 1, 65536, 327682, 1, 131071, 327682, 1, 131070, 327682, 1, 65534, 327682, 1, -2, 327682, 1, -65537, 327682, 1, -131072, 327682, 1, -131071, 327682, 1, -65535, 327682, 1, 2, 327682, 1, 65537, 327682, 1, 131073, 327682, 1, 131072, 327682, 1, 196607, 327682, 1, 196608, 327682, 1, 262143, 327682, 1, 262142, 327682, 1, 196606, 327682, 1, 131069, 327682, 1, 65533, 327682, 1, -3, 327682, 1, -65538, 327682, 1, -131074, 327682, 1, -131073, 327682, 1, -196608, 327682, 1, -196607, 327682, 1, -131070, 327682, 1, -65534, 327682, 1, 3, 327682, 1, 65538, 327682, 1, 131074, 327682, 1, 196609, 327682, 1)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = -1
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -24.0
grow_horizontal = 0
grow_vertical = 2
theme = ExtResource("2_y8a26")

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/PanelContainer/MarginContainer"]
layout_mode = 2

[node name="SaveBuilding" type="Button" parent="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Save Building"

[node name="ClearBuilding" type="Button" parent="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Clear Building"

[node name="ExitEditor" type="Button" parent="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Exit Editor"

[node name="HSeparator" type="HSeparator" parent="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="SetCollision" type="Button" parent="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Set Collision"

[node name="SetEffect" type="Button" parent="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Set Effect"

[node name="HSeparator2" type="HSeparator" parent="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "File Name:"

[node name="FileNameEdit" type="LineEdit" parent="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 2.08165e-12)
layout_mode = 2
size_flags_horizontal = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Building Name:"

[node name="BuildingNameEdit" type="LineEdit" parent="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 2.08165e-12)
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Building Description:"

[node name="BuildingDescriptionEdit" type="TextEdit" parent="CanvasLayer/PanelContainer/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(2.08165e-12, 200)
layout_mode = 2
